fix: avoid animation to overflow on desktop (Firefox)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   background-color: #002e66;
+  overflow-x: hidden;
 }
 
 .home-enter-active,
